--- a/apps/web/src/app/(pages)/(content-management)/content-models/[contentModelId]/edit/edit-content-model.page.html
+++ b/apps/web/src/app/(pages)/(content-management)/content-models/[contentModelId]/edit/edit-content-model.page.html
@@ -10,41 +10,31 @@
     ></app-textarea>
     <div class="govuk-summary-card">
       <div class="govuk-summary-card__title-wrapper">
-        <h2 class="govuk-summary-card__title">
-          Properties
-        </h2>
+        <h2 class="govuk-summary-card__title">Properties</h2>
         <ul class="govuk-summary-card__actions">
           <li class="govuk-summary-card__action">
-            <a class="govuk-link" href="#">Add property<span class="govuk-visually-hidden"> to properties</span></a>
+            <a class="govuk-link" href="javascript:void(0)" (click)="addProperty()">
+              Add property<span class="govuk-visually-hidden"> to properties</span>
+            </a>
           </li>
         </ul>
       </div>
       <div class="govuk-summary-card__content">
         <dl class="govuk-summary-list">
           <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Course
-            </dt>
-            <dd class="govuk-summary-list__value">
-              English (3DMD)<br>PGCE with QTS full time
-            </dd>
+            <dt class="govuk-summary-list__key">Course</dt>
+            <dd class="govuk-summary-list__value">English (3DMD)<br />PGCE with QTS full time</dd>
           </div>
           <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Location
-            </dt>
-            <dd class="govuk-summary-list__value">
-              School name<br>Road, City, SW1 1AA
-            </dd>
+            <dt class="govuk-summary-list__key">Location</dt>
+            <dd class="govuk-summary-list__value">School name<br />Road, City, SW1 1AA</dd>
           </div>
         </dl>
       </div>
     </div>
 
     <app-button-group>
-      <app-button type="submit" (click)="saveContentModel()">
-        Save content model
-      </app-button>
+      <app-button type="submit" (click)="saveContentModel()"> Save content model </app-button>
     </app-button-group>
   </form>
 }
