--- a/apps/web/src/app/components/radio/radio.component.scss
+++ b/apps/web/src/app/components/radio/radio.component.scss
@@ -1,3 +1,7 @@
 .govuk-radios__conditional:not(:has(*)) {
   margin-bottom: 0;
 }
+
+::ng-deep .govuk-form-group .govuk-form-group:last-of-type {
+  margin-bottom: 30px;
+}
