--- a/apps/web/src/app/(pages)/(technical-records)/search/search-technical-records.page.html
+++ b/apps/web/src/app/(pages)/(technical-records)/search/search-technical-records.page.html
@@ -1,1 +1,13 @@
 <h1 class="govuk-heading-l">Search technical records</h1>
+
+<form [formGroup]="form">
+  <h2 class="govuk-heading-s">Enter a VIN, VRM, or Trailer ID</h2>
+  <div class="search-container">
+    <app-text-input
+      class="search-input"
+      formControlName="searchTerm"
+      id="searchInput"
+    ></app-text-input>
+    <app-button class="search-button" (click)="search()" id="searchButton">Search</app-button>
+  </div>
+</form>
