--- a/apps/web/src/app/(pages)/(technical-records)/create/details/create-technical-record-details.page.html
+++ b/apps/web/src/app/(pages)/(technical-records)/create/details/create-technical-record-details.page.html
@@ -1,3 +1,3 @@
 <h1 class="govuk-heading-l">Create a new technical record</h1>
 
-<app-technical-record-form />
+<app-technical-record-form [techRecord]="techRecord()" />
