--- a/apps/web/src/app/forms/general-vehicle-details/general-vehicle-details.form.html
+++ b/apps/web/src/app/forms/general-vehicle-details/general-vehicle-details.form.html
@@ -1,243 +1,213 @@
 @if (techRecord(); as techRecord) {
+  @let vehicleType = techRecord.techRecord_vehicleType;
+
   <div class="govuk-!-padding-4" [formGroup]="form">
-    @if (form.get('techRecord_regnDate')?.value !== undefined) {
-      <app-date-input
-        label="Date of first registration"
-        [hint]="'For example, 27 3 2024'"
-        formControlName="techRecord_regnDate"
-      ></app-date-input>
-    }
+    <app-date-input
+      *forVehicleTypes="['hgv']; vehicleType: vehicleType"
+      [forTags]="['Plates', 'Required']"
+      [forTagsFilters]="filters()"
+      [label]="'Date of first registration'"
+      [hint]="'For example, 27 3 2024'"
+      [formControlName]="'techRecord_regnDate'"
+    ></app-date-input>
 
-    @if (form.get('techRecord_manufactureMonth')?.value !== undefined) {
-      <app-select
-        label="Month of manufacture"
-        formControlName="techRecord_manufactureMonth"
-        [options]="[]"
-      ></app-select>
-    }
+    <app-select
+      *forVehicleTypes="['trl']; vehicleType: vehicleType"
+      [forTags]="[]"
+      [forTagsFilters]="filters()"
+      [label]="'Month of manufacture'"
+      [formControlName]="'techRecord_manufactureMonth'"
+      [options]="constants.monthOptions"
+    ></app-select>
 
-    @if (form.get('techRecord_manufactureYear')?.value !== undefined) {
-      <app-text-input
-        label="Year of manufacture"
-        formControlName="techRecord_manufactureYear"
-        type="number"
-      ></app-text-input>
-    }
+    <app-text-input
+      *forVehicleTypes="['hgv']; vehicleType: vehicleType"
+      [forTags]="['Plates']"
+      [forTagsFilters]="filters()"
+      [label]="'Year of manufacture'"
+      [formControlName]="'techRecord_manufactureYear'"
+      [type]="'number'"
+    ></app-text-input>
 
-    @if (form.get('techRecord_firstUseDate')?.value !== undefined) {
-      <app-date-input
-        label="Date of first use"
-        [hint]="'For example, 27 3 2024'"
-        formControlName="techRecord_firstUseDate"
-      ></app-date-input>
-    }
+    <app-typeahead
+      *forVehicleTypes="['psv']; vehicleType: vehicleType"
+      [forTags]="[]"
+      [forTagsFilters]="filters()"
+      [label]="'DTp number'"
+      [formControlName]="'techRecord_brakes_dtpNumber'"
+      [placeholder]="'Select DTp number'"
+      [options]="[]"
+      [id]="'techRecord_brakes_dtpNumber'"
+    ></app-typeahead>
 
-    <!--
-    @if (form.get('techRecord_brakes_dtpNumber')?.value !== undefined) {
-      @if (techRecord().techRecord_vehicleType === 'psv') {
-        <govuk-form-group-autocomplete
-          type="text"
-          formControlName="techRecord_brakes_dtpNumber"
-          label="DTp number"
-          [width]="FormNodeWidth.XL"
-          [placeholder]="'Select DTp number'"
-          [options$]="dtpNumbers$"
-        />
-      } @else {
-       <app-text-input
-          type="text"
-          formControlName="techRecord_brakes_dtpNumber"
-          label="DTp number"
-          [width]="FormNodeWidth.L"
-        />
-      }
-    }
-    -->
+    <app-text-input
+      *forVehicleTypes="['hgv']; vehicleType: vehicleType"
+      [forTags]="[]"
+      [forTagsFilters]="filters()"
+      [label]="'DTp number'"
+      [formControlName]="'techRecord_brakes_dtpNumber'"
+    ></app-text-input>
 
-    @if (form.get('techRecord_vehicleConfiguration')?.value !== undefined) {
-      <!--
-      @if (
-        techRecord().techRecord_vehicleType === VehicleTypes.MOTORCYCLE ||
-        techRecord().techRecord_vehicleType === VehicleTypes.CAR
-      ) {
-       <app-text-input
-          type="text"
-          class="capitalise"
-          label="Vehicle configuration"
-          formControlName="techRecord_vehicleConfiguration"
-          [width]="FormNodeWidth.L"
-        ></govuk-form-group-input>
-      } @else {
-        <app-select
-          label="Vehicle configuration"
-          [defaultOption]="'Select configuration'"
-          [options]="vehicleConfigurationOptions"
-          formControlName="techRecord_vehicleConfiguration"
-        ></app-select>
-      }
-      -->
-    }
+    <app-text-input
+      *forVehicleTypes="['car', 'motorcycle']; vehicleType: vehicleType"
+      [forTags]="[]"
+      [forTagsFilters]="filters()"
+      [label]="'Vehicle configuration'"
+      [formControlName]="'techRecord_vehicleConfiguration'"
+    ></app-text-input>
 
-    <!--
-    @if (
-      form.get('techRecord_vehicleClass_description') &&
-      techRecord().techRecord_vehicleType === VehicleTypes.MOTORCYCLE
-    ) {
-      <app-select
-        label="Vehicle class"
-        [defaultOption]="'Select vehicle class'"
-        [options]="MOTORCYCLE_VEHICLE_CLASS_DESCRIPTION_OPTIONS"
-        formControlName="techRecord_vehicleClass_description"
-      ></app-select>
-    }
-  
-    @if (form.get('techRecord_frameDescription')?.value !== undefined) {
-      <app-select
-        label="Frame description"
-        formControlName="techRecord_frameDescription"
-        [options]="FRAME_DESCRIPTION_OPTIONS"
-        [defaultOption]="'Select frame description'"
-      ></app-select>
-    }
-    -->
+    <app-select
+      *forVehicleTypes="['hgv', 'trl', 'psv', 'lgv', 'small trl']; vehicleType: vehicleType"
+      [forTags]="[]"
+      [forTagsFilters]="filters()"
+      [label]="'Vehicle configuration'"
+      [placeholder]="'Select configuration'"
+      [options]="constants.vehicleConfigurationOptions[vehicleType]"
+      [formControlName]="'techRecord_vehicleConfiguration'"
+    ></app-select>
 
-    <!--  Start of PSV only fields -->
-    @if (form.get('techRecord_chassisMake')?.value !== undefined) {
-      <app-text-input
-        type="text"
-        formControlName="techRecord_chassisMake"
-        label="Chassis make"
-      ></app-text-input>
-    }
+    <app-select
+      *forVehicleTypes="['motorcycle']; vehicleType: vehicleType"
+      [forTags]="[]"
+      [forTagsFilters]="filters()"
+      [label]="'Vehicle class'"
+      [placeholder]="'Select vehicle class'"
+      [formControlName]="'techRecord_vehicleClass_description'"
+      [options]="constants.vehicleClassOptions"
+    ></app-select>
 
-    @if (form.get('techRecord_chassisModel')?.value !== undefined) {
-      <app-text-input
-        type="text"
-        formControlName="techRecord_chassisModel"
-        label="Chassis model"
-      ></app-text-input>
-    }
+    <app-select
+      *forVehicleTypes="['trl']; vehicleType: vehicleType"
+      [forTags]="[]"
+      [forTagsFilters]="filters()"
+      [label]="'Frame description'"
+      [formControlName]="'techRecord_frameDescription'"
+      [placeholder]="'Select frame description'"
+      [options]="constants.frameDescriptionOptions"
+    ></app-select>
 
-    @if (form.get('techRecord_bodyMake')?.value !== undefined) {
-      <app-text-input
-        type="text"
-        formControlName="techRecord_bodyMake"
-        label="Body make"
-      ></app-text-input>
-    }
+    <app-text-input
+      *forVehicleTypes="['psv']; vehicleType: vehicleType"
+      [forTags]="[]"
+      [forTagsFilters]="filters()"
+      [label]="'Chassis make'"
+      [formControlName]="'techRecord_chassisMake'"
+    ></app-text-input>
 
-    @if (form.get('techRecord_bodyModel')?.value !== undefined) {
-      <app-text-input
-        type="text"
-        formControlName="techRecord_bodyModel"
-        label="Body model"
-      ></app-text-input>
-    }
+    <app-text-input
+      *forVehicleTypes="['psv']; vehicleType: vehicleType"
+      [forTags]="[]"
+      [forTagsFilters]="filters()"
+      [label]="'Chassis model'"
+      [formControlName]="'techRecord_chassisModel'"
+    ></app-text-input>
 
-    <!--
-    @if (
-      form.get('techRecord_vehicleClass_description') &&
-      techRecord().techRecord_vehicleType === VehicleTypes.PSV
-    ) {
-     <app-text-input
-        type="text"
-        formControlName="techRecord_vehicleClass_description"
-        label="Vehicle class"
-        [width]="FormNodeWidth.L"
-      >
-      </govuk-form-group-input>
-    }
-    -->
+    <app-text-input
+      *forVehicleTypes="['hgv', 'trl', 'psv']; vehicleType: vehicleType"
+      [forTags]="[]"
+      [forTagsFilters]="filters()"
+      [label]="'Body make'"
+      [formControlName]="'techRecord_bodyMake'"
+    ></app-text-input>
 
-    @if (form.get('techRecord_vehicleSubclass')?.value !== undefined) {
-      <app-checkboxes
-        label="Vehicle subclass"
-        formControlName="techRecord_vehicleSubclass"
-        [options]="[]"
-      ></app-checkboxes>
-    }
+    <app-text-input
+      *forVehicleTypes="['hgv', 'trl', 'psv']; vehicleType: vehicleType"
+      [forTags]="[]"
+      [forTagsFilters]="filters()"
+      [label]="'Body model'"
+      [formControlName]="'techRecord_bodyModel'"
+    ></app-text-input>
 
-    @if (form.get('techRecord_make')?.value !== undefined) {
-      <app-select type="text" formControlName="techRecord_make" label="Body make" [options]="[]">
-      </app-select>
-    }
+    <app-text-input
+      *forVehicleTypes="['psv']; vehicleType: vehicleType"
+      [forTags]="[]"
+      [forTagsFilters]="filters()"
+      [label]="'Vehicle class'"
+      [formControlName]="'techRecord_vehicleClass_description'"
+    ></app-text-input>
 
-    @if (form.get('techRecord_model')?.value !== undefined) {
-      <app-text-input
-        type="text"
-        formControlName="techRecord_model"
-        label="Body model"
-      ></app-text-input>
-    }
+    <app-checkboxes
+      *forVehicleTypes="['car', 'lgv', 'motorcycle']; vehicleType: vehicleType"
+      [forTags]="[]"
+      [forTagsFilters]="filters()"
+      [label]="'Vehicle subclass'"
+      [formControlName]="'techRecord_vehicleSubclass'"
+      [options]="constants.vehicleSubclassOptions"
+    ></app-checkboxes>
 
-    @if (form.get('techRecord_bodyType_description')?.value !== undefined) {
-      <!--
-      @if (techRecord().techRecord_vehicleType === VehicleTypes.PSV) {
-       <app-text-input
-          type="text"
-          formControlName="techRecord_bodyType_description"
-          label="Body type"
-        />
-      } @else {
-        <app-select
-          type="text"
-          formControlName="techRecord_bodyType_description"
-          label="Body type"
-          [options]="[]"
-        >
-        </app-select>
-      }
-      -->
-    }
+    <app-select
+      *forVehicleTypes="['hgv', 'trl', 'psv']; vehicleType: vehicleType"
+      [forTags]="[]"
+      [forTagsFilters]="filters()"
+      [label]="'Body make'"
+      [formControlName]="'techRecord_make'"
+      [options]="[]"
+    ></app-select>
 
-    @if (form.get('techRecord_modelLiteral')?.value !== undefined) {
-      <app-text-input
-        type="text"
-        formControlName="techRecord_modelLiteral"
-        label="Model literal"
-      ></app-text-input>
-    }
+    <app-text-input
+      *forVehicleTypes="['hgv', 'trl', 'psv']; vehicleType: vehicleType"
+      [forTags]="[]"
+      [forTagsFilters]="filters()"
+      [label]="'Body model'"
+      [formControlName]="'techRecord_model'"
+    ></app-text-input>
 
-    @if (form.get('techRecord_functionCode')?.value !== undefined) {
-      <app-select
-        type="text"
-        formControlName="techRecord_functionCode"
-        label="Function code"
-        [options]="[]"
-      ></app-select>
-    }
+    <app-text-input
+      *forVehicleTypes="['psv']; vehicleType: vehicleType"
+      [forTags]="[]"
+      [forTagsFilters]="filters()"
+      [label]="'Body type'"
+      [formControlName]="'techRecord_bodyType_description'"
+    ></app-text-input>
 
-    @if (form.get('techRecord_conversionRefNo')?.value !== undefined) {
-      <app-text-input
-        formControlName="techRecord_conversionRefNo"
-        label="Conversion reference number"
-        type="text"
-        appToUppercase
-      ></app-text-input>
-    }
+    <app-select
+      *forVehicleTypes="['hgv', 'trl']; vehicleType: vehicleType"
+      [forTags]="[]"
+      [forTagsFilters]="filters()"
+      [label]="'Body type'"
+      [formControlName]="'techRecord_bodyType_description'"
+      [options]="[]"
+    ></app-select>
 
-    @if (form.get('techRecord_euVehicleCategory')?.value !== undefined) {
-      <app-radios
-        label="EU vehicle category"
-        formControlName="techRecord_euVehicleCategory"
-        [options]="[]"
-      ></app-radios>
-    }
+    <app-text-input
+      *forVehicleTypes="['psv']; vehicleType: vehicleType"
+      formControlName="techRecord_modelLiteral"
+      label="Model literal"
+    ></app-text-input>
 
-    @if (form.get('techRecord_numberOfWheelsDriven')?.value !== undefined) {
-      <app-text-input
-        label="Number of wheels"
-        formControlName="techRecord_numberOfWheelsDriven"
-        type="number"
-      ></app-text-input>
-    }
+    <app-select
+      *forVehicleTypes="['hgv', 'trl']; vehicleType: vehicleType"
+      formControlName="techRecord_functionCode"
+      label="Function code"
+      [options]="[]"
+    ></app-select>
 
-    @if (form.get('techRecord_noOfAxles')?.value !== undefined) {
-      <app-text-input
-        label="Number of axles"
-        formControlName="techRecord_noOfAxles"
-        type="number"
-      ></app-text-input>
-    }
+    <app-text-input
+      *forVehicleTypes="['hgv', 'trl']; vehicleType: vehicleType"
+      label="Conversion reference number"
+      formControlName="techRecord_conversionRefNo"
+      appNoSpace
+      appToUppercase
+      appTrimWhitespace
+    ></app-text-input>
+
+    <app-radios
+      label="EU vehicle category"
+      formControlName="techRecord_euVehicleCategory"
+      [options]="constants.euVehicleCategoryOptions[vehicleType]"
+    ></app-radios>
+
+    <app-text-input
+      *forVehicleTypes="['motorcycle']; vehicleType: vehicleType"
+      type="number"
+      label="Number of wheels"
+      formControlName="techRecord_numberOfWheelsDriven"
+    ></app-text-input>
+
+    <app-text-input
+      type="number"
+      label="Number of axles"
+      formControlName="techRecord_noOfAxles"
+    ></app-text-input>
   </div>
 }
