--- a/apps/web/src/app/forms/technical-record/technical-record.form.html
+++ b/apps/web/src/app/forms/technical-record/technical-record.form.html
@@ -3,7 +3,7 @@
     <app-accordion>
       <app-accordion-controls>
         <!-- General vehicle details -->
-        @if (techRecordService.canHaveGeneralVehicleDetails(techRecord.type)) {
+        @if (techRecordService.canHaveGeneralVehicleDetails(techRecord.techRecord_vehicleType)) {
           <app-accordion-section
             heading="General vehicle details"
             summary="Date of registration, body details, EU category."
@@ -13,7 +13,7 @@
         }
 
         <!-- Approval type (HGV, TRL) -->
-        @if (techRecordService.canHaveApprovalType(techRecord.type)) {
+        @if (techRecordService.canHaveApprovalType(techRecord.techRecord_vehicleType)) {
           <app-accordion-section
             heading="Approval type"
             summary="Approval type, national type, variant number."
@@ -23,14 +23,14 @@
         }
 
         <!-- Dimensions (HGV, TRL, PSV) -->
-        @if (techRecordService.canHaveDimensions(techRecord.type)) {
+        @if (techRecordService.canHaveDimensions(techRecord.techRecord_vehicleType)) {
           <app-accordion-section heading="Dimensions" summary="Axle distance, vehicle dimensions.">
             <app-dimensions-form />
           </app-accordion-section>
         }
 
         <!-- Authorisation into service (TRL) -->
-        @if (techRecordService.canHaveAuthorisationIntoService(techRecord.type)) {
+        @if (techRecordService.canHaveAuthorisationIntoService(techRecord.techRecord_vehicleType)) {
           <app-accordion-section
             heading="Authorisation into service"
             summary="Dates tracking the vehicle's authorisation into service."
@@ -40,14 +40,14 @@
         }
 
         <!-- Purchaser (TRL) -->
-        @if (techRecordService.canHavePurchaser(techRecord.type)) {
+        @if (techRecordService.canHavePurchaser(techRecord.techRecord_vehicleType)) {
           <app-accordion-section heading="Purchaser" summary="Contact details for the purchaser.">
             <app-purchaser-form />
           </app-accordion-section>
         }
 
         <!-- Manufacturer -->
-        @if (techRecordService.canHaveManufacturer(techRecord.type)) {
+        @if (techRecordService.canHaveManufacturer(techRecord.techRecord_vehicleType)) {
           <app-accordion-section
             heading="Manufactuer"
             summary="Contact details for the manufacturer."
@@ -57,7 +57,7 @@
         }
 
         <!-- Weights (HGV, TRL, PSV) -->
-        @if (techRecordService.canHaveWeights(techRecord.type)) {
+        @if (techRecordService.canHaveWeights(techRecord.techRecord_vehicleType)) {
           <app-accordion-section heading="Weights" summary="Axle weights, unladen weight.">
             <app-weights-form />
           </app-accordion-section>
@@ -72,14 +72,14 @@
         </app-accordion-section>
 
         <!-- Tyres (HGV, TRL, PSV) -->
-        @if (techRecordService.canHaveTyres(techRecord.type)) {
+        @if (techRecordService.canHaveTyres(techRecord.techRecord_vehicleType)) {
           <app-accordion-section heading="Tyres" summary="Tyre details, tyre use code.">
             <app-tyres-form />
           </app-accordion-section>
         }
 
         <!-- Emissions and exemptions -->
-        @if (techRecordService.canHaveEmissionsAndExemptions(techRecord.type)) {
+        @if (techRecordService.canHaveEmissionsAndExemptions(techRecord.techRecord_vehicleType)) {
           <app-accordion-section
             heading="Emissions and exemptions"
             summary="Drawbar coupling, Euro standard, tacho exemption."
@@ -89,14 +89,14 @@
         }
 
         <!-- ADR -->
-        @if (techRecordService.canHaveAdr(techRecord.type)) {
+        @if (techRecordService.canHaveAdr(techRecord.techRecord_vehicleType)) {
           <app-accordion-section heading="ADR" summary="Approval for carrying dangerous goods.">
             <app-adr-form />
           </app-accordion-section>
         }
 
         <!-- Last applicant -->
-        @if (techRecordService.canHaveLastApplicant(techRecord.type)) {
+        @if (techRecordService.canHaveLastApplicant(techRecord.techRecord_vehicleType)) {
           <app-accordion-section
             heading="Last applicant"
             summary="Contact details for the last applicant."
@@ -106,7 +106,7 @@
         }
 
         <!-- Seats and vehicle size -->
-        @if (techRecordService.canHaveSeatsAndVehicleSize(techRecord.type)) {
+        @if (techRecordService.canHaveSeatsAndVehicleSize(techRecord.techRecord_vehicleType)) {
           <app-accordion-section
             heading="Seats and vehicle size"
             summary="Seat, vehicle size, seatbelts."
@@ -116,14 +116,14 @@
         }
 
         <!-- Brakes -->
-        @if (techRecordService.canHaveBrakes(techRecord.type)) {
+        @if (techRecordService.canHaveBrakes(techRecord.techRecord_vehicleType)) {
           <app-accordion-section heading="Brakes" summary="Brake codes, retarders, parking brakes.">
             <app-brakes-form />
           </app-accordion-section>
         }
 
         <!-- Disability discrimination act -->
-        @if (techRecordService.canHaveDisabilityDiscriminationAct(techRecord.type)) {
+        @if (techRecordService.canHaveDisabilityDiscriminationAct(techRecord.techRecord_vehicleType)) {
           <app-accordion-section
             heading="Disability discrimination act"
             summary="Wheelchair capacity, accessibility, schedules."
@@ -133,21 +133,21 @@
         }
 
         <!-- Documents -->
-        @if (techRecordService.canHaveDocuments(techRecord.type)) {
+        @if (techRecordService.canHaveDocuments(techRecord.techRecord_vehicleType)) {
           <app-accordion-section heading="Documents" summary="Microfilm document details.">
             <app-documents-form />
           </app-accordion-section>
         }
 
         <!-- Notes -->
-        @if (techRecordService.canHaveNotes(techRecord.type)) {
+        @if (techRecordService.canHaveNotes(techRecord.techRecord_vehicleType)) {
           <app-accordion-section heading="Notes" summary="Notes attached to this record.">
             <app-notes-form />
           </app-accordion-section>
         }
 
         <!-- Reason for amendment -->
-        @if (techRecordService.canHaveReasonForAmendment(techRecord.type)) {
+        @if (techRecordService.canHaveReasonForAmendment(techRecord.techRecord_vehicleType)) {
           <app-accordion-section
             heading="Reason for amendment"
             summary="Tell us why you're amending this record."
