--- a/apps/web/src/app/components/select/select.component.html
+++ b/apps/web/src/app/components/select/select.component.html
@@ -26,6 +26,12 @@
     (ngModelChange)="onChange($event)"
     (blur)="onTouched()"
   >
+    @if (placeholder()) {
+      <option [ngValue]="null" disabled selected>
+        {{ placeholder() }}
+      </option>
+    }    
+
     @for (option of options(); track $index) {
       <option
         [ngValue]="option.value"
