--- a/apps/web/src/styles.scss
+++ b/apps/web/src/styles.scss
@@ -23,3 +23,31 @@
   font-weight: 400;
   src: url('govuk-frontend/dist/govuk/assets/fonts/light-94a07e06a1-v2.woff2');
 }
+
+.govuk-input--width-30 {
+  --max-width: 29.5em;
+}
+
+.govuk-input--width-20 {
+  --max-width: 20.5em;
+}
+
+.govuk-input--width-10 {
+  --max-width: 11.5em;
+}
+
+.govuk-input--width-5 {
+  --max-width: 5.5em;
+}
+
+.govuk-input--width-4 {
+  --max-width: 4.5em;
+}
+
+.govuk-input--width-3 {
+  --max-width: 3.75em;
+}
+
+.govuk-input--width-2 {
+  --max-width: 2.75em;
+}
