--- a/apps/web/src/app/components/typeahead/typeahead.component.html
+++ b/apps/web/src/app/components/typeahead/typeahead.component.html
@@ -26,7 +26,7 @@
   </ng-content>
 
   <!-- Options -->
-  <div class="relative fit-content {{ width$() }}">
+  <div class="options-container {{ width$() }}">
     <input
       ngxTypeahead
       class="govuk-input"
@@ -45,7 +45,7 @@
       #typeahead
     />
 
-    <div class="absolute right-0 top-0 h-full aspect-square grid place-items-center">
+    <div class="chevron-container">
       <svg style="height: 17px" viewBox="0 0 512 512">
         <path
           d="M256,298.3L256,298.3L256,298.3l174.2-167.2c4.3-4.2,11.4-4.1,15.8,0.2l30.6,29.9c4.4,4.3,4.5,11.3,0.2,15.5L264.1,380.9  c-2.2,2.2-5.2,3.2-8.1,3c-3,0.1-5.9-0.9-8.1-3L35.2,176.7c-4.3-4.2-4.2-11.2,0.2-15.5L66,131.3c4.4-4.3,11.5-4.4,15.8-0.2L256,298.3  z"
@@ -56,13 +56,13 @@
     <ng-template #itemTpl let-result>
       <div
         [id]="id$() + '-item-' + result.index"
-        class="border-b border-[#b1b4b6] w-full group-focus:bg-blue-300"
+        class="option"
         [ngClass]="{
-          'bg-white': result.index % 2 !== 0,
-          'bg-[#fafafa]': result.index % 2 === 0,
+          odd: result.index % 2 !== 0,
+          even: result.index % 2 === 0,
         }"
       >
-        <p class="text-left govuk-body !mb-0 p-2">{{ result.result.label }}</p>
+        <p class="option-label govuk-body">{{ result.result.label }}</p>
       </div>
     </ng-template>
   </div>
