--- a/apps/web/src/app/components/typeahead/ngx-typeahead.component.html
+++ b/apps/web/src/app/components/typeahead/ngx-typeahead.component.html
@@ -1,13 +1,11 @@
 <ng-template #suggestionsTplRef>
   @if (showSuggestions()) {
-    <section
-      class="absolute w-full border-b-2 border-l-2 border-r-2 border-black bg-white overflow-auto max-h-96"
-    >
+    <section class="suggestions-container">
       <div class="ta-backdrop" (click)="hideSuggestions()"></div>
       @for (result of results; track $index) {
         <button
           type="button"
-          class="relative z-2 block w-full group focus:outline-none"
+          class="suggestion"
           [class.active]="markIsActive($index, result)"
           (click)="handleSelectionClick(result, $index)"
         >
@@ -23,7 +21,7 @@
             $implicit: {
               result: { label: 'No results found', value: null },
               index: 0,
-              suggestionIndex
+              suggestionIndex,
             },
           }"
         ></ng-template>
