--- a/apps/web/src/app/forms/technical-record/technical-record.form.html
+++ b/apps/web/src/app/forms/technical-record/technical-record.form.html
@@ -3,158 +3,203 @@
     <app-accordion>
       <app-accordion-controls>
         <!-- General vehicle details -->
-        @if (techRecordService.canHaveGeneralVehicleDetails(techRecord.techRecord_vehicleType)) {
+        @if (techRecordService.canHaveGeneralVehicleDetails(techRecord)) {
           <app-accordion-section
+            *forTags="[]; filters: filters()"
             heading="General vehicle details"
             summary="Date of registration, body details, EU category."
           >
-            <app-general-vehicle-details [techRecord]="techRecord" />
+            <app-general-vehicle-details [techRecord]="techRecord" [filters]="filters()" />
           </app-accordion-section>
         }
 
-        <!-- Approval type (HGV, TRL) -->
-        @if (techRecordService.canHaveApprovalType(techRecord.techRecord_vehicleType)) {
+        <!-- Approval type (HGV, TRL, PSV) -->
+        @if (techRecordService.canHaveApprovalType(techRecord)) {
           <app-accordion-section
+            *forTags="[]; filters: filters()"
             heading="Approval type"
             summary="Approval type, national type, variant number."
           >
-            <app-approval-type-form [techRecord]="techRecord" />
+            <app-approval-type-form [techRecord]="techRecord" [filters]="filters()" />
           </app-accordion-section>
         }
 
         <!-- Dimensions (HGV, TRL, PSV) -->
-        @if (techRecordService.canHaveDimensions(techRecord.techRecord_vehicleType)) {
-          <app-accordion-section heading="Dimensions" summary="Axle distance, vehicle dimensions.">
-            <app-dimensions-form />
+        @if (techRecordService.canHaveDimensions(techRecord)) {
+          <app-accordion-section
+            *forTags="[]; filters: filters()"
+            heading="Dimensions"
+            summary="Axle distance, vehicle dimensions."
+          >
+            <app-dimensions-form [techRecord]="techRecord" [filters]="filters()" />
           </app-accordion-section>
         }
 
         <!-- Authorisation into service (TRL) -->
-        @if (techRecordService.canHaveAuthorisationIntoService(techRecord.techRecord_vehicleType)) {
+        @if (techRecordService.canHaveAuthorisationIntoService(techRecord)) {
           <app-accordion-section
+            *forTags="[]; filters: filters()"
             heading="Authorisation into service"
             summary="Dates tracking the vehicle's authorisation into service."
           >
-            <app-authorisation-into-service-form />
+            <app-authorisation-into-service-form [techRecord]="techRecord" [filters]="filters()" />
           </app-accordion-section>
         }
 
         <!-- Purchaser (TRL) -->
-        @if (techRecordService.canHavePurchaser(techRecord.techRecord_vehicleType)) {
-          <app-accordion-section heading="Purchaser" summary="Contact details for the purchaser.">
-            <app-purchaser-form />
+        @if (techRecordService.canHavePurchaser(techRecord)) {
+          <app-accordion-section
+            *forTags="[]; filters: filters()"
+            heading="Purchaser"
+            summary="Contact details for the purchaser."
+          >
+            <app-purchaser-form [techRecord]="techRecord" [filters]="filters()" />
           </app-accordion-section>
         }
 
         <!-- Manufacturer -->
-        @if (techRecordService.canHaveManufacturer(techRecord.techRecord_vehicleType)) {
+        @if (techRecordService.canHaveManufacturer(techRecord)) {
           <app-accordion-section
+            *forTags="[]; filters: filters()"
             heading="Manufactuer"
             summary="Contact details for the manufacturer."
           >
-            <app-manufacturer-form />
+            <app-manufacturer-form [techRecord]="techRecord" [filters]="filters()" />
           </app-accordion-section>
         }
 
         <!-- Weights (HGV, TRL, PSV) -->
-        @if (techRecordService.canHaveWeights(techRecord.techRecord_vehicleType)) {
-          <app-accordion-section heading="Weights" summary="Axle weights, unladen weight.">
-            <app-weights-form />
+        @if (techRecordService.canHaveWeights(techRecord)) {
+          <app-accordion-section
+            *forTags="[]; filters: filters()"
+            heading="Weights"
+            summary="Axle weights, unladen weight."
+          >
+            <app-weights-form [techRecord]="techRecord" [filters]="filters()" />
           </app-accordion-section>
         }
 
         <!-- Configuration -->
-        <app-accordion-section
-          heading="Configuration"
-          summary="Off-road, fuel system, road friendly suspension."
-        >
-          <app-configuration-form />
-        </app-accordion-section>
+        @if (techRecordService.canHaveConfiguration(techRecord)) {
+          <app-accordion-section
+            *forTags="[]; filters: filters()"
+            heading="Configuration"
+            summary="Off-road, fuel system, road friendly suspension."
+          >
+            <app-configuration-form [techRecord]="techRecord" [filters]="filters()" />
+          </app-accordion-section>
+        }
 
         <!-- Tyres (HGV, TRL, PSV) -->
-        @if (techRecordService.canHaveTyres(techRecord.techRecord_vehicleType)) {
-          <app-accordion-section heading="Tyres" summary="Tyre details, tyre use code.">
-            <app-tyres-form />
+        @if (techRecordService.canHaveTyres(techRecord)) {
+          <app-accordion-section
+            *forTags="[]; filters: filters()"
+            heading="Tyres"
+            summary="Tyre details, tyre use code."
+          >
+            <app-tyres-form [techRecord]="techRecord" [filters]="filters()" />
           </app-accordion-section>
         }
 
         <!-- Emissions and exemptions -->
-        @if (techRecordService.canHaveEmissionsAndExemptions(techRecord.techRecord_vehicleType)) {
+        @if (techRecordService.canHaveEmissionsAndExemptions(techRecord)) {
           <app-accordion-section
+            *forTags="[]; filters: filters()"
             heading="Emissions and exemptions"
             summary="Drawbar coupling, Euro standard, tacho exemption."
           >
-            <app-emissions-and-exemptions-form />
+            <app-emissions-and-exemptions-form [techRecord]="techRecord" [filters]="filters()" />
           </app-accordion-section>
         }
 
         <!-- ADR -->
         @if (techRecordService.canHaveAdr(techRecord.techRecord_vehicleType)) {
-          <app-accordion-section heading="ADR" summary="Approval for carrying dangerous goods.">
-            <app-adr-form />
+          <app-accordion-section
+            *forTags="[]; filters: filters()"
+            heading="ADR"
+            summary="Approval for carrying dangerous goods."
+          >
+            <app-adr-form [techRecord]="techRecord" [filters]="filters()" />
           </app-accordion-section>
         }
 
         <!-- Last applicant -->
-        @if (techRecordService.canHaveLastApplicant(techRecord.techRecord_vehicleType)) {
+        @if (techRecordService.canHaveLastApplicant(techRecord)) {
           <app-accordion-section
+            *forTags="[]; filters: filters()"
             heading="Last applicant"
             summary="Contact details for the last applicant."
           >
-            <app-last-applicant-form />
+            <app-last-applicant-form [techRecord]="techRecord" [filters]="filters()" />
           </app-accordion-section>
         }
 
         <!-- Seats and vehicle size -->
-        @if (techRecordService.canHaveSeatsAndVehicleSize(techRecord.techRecord_vehicleType)) {
+        @if (techRecordService.canHaveSeatsAndVehicleSize(techRecord)) {
           <app-accordion-section
+            *forTags="[]; filters: filters()"
             heading="Seats and vehicle size"
             summary="Seat, vehicle size, seatbelts."
           >
-            <app-seats-and-vehicle-size-form />
+            <app-seats-and-vehicle-size-form [techRecord]="techRecord" [filters]="filters()" />
           </app-accordion-section>
         }
 
         <!-- Brakes -->
-        @if (techRecordService.canHaveBrakes(techRecord.techRecord_vehicleType)) {
-          <app-accordion-section heading="Brakes" summary="Brake codes, retarders, parking brakes.">
-            <app-brakes-form />
+        @if (techRecordService.canHaveBrakes(techRecord)) {
+          <app-accordion-section
+            *forTags="[]; filters: filters()"
+            heading="Brakes"
+            summary="Brake codes, retarders, parking brakes."
+          >
+            <app-brakes-form [techRecord]="techRecord" [filters]="filters()" />
           </app-accordion-section>
         }
 
         <!-- Disability discrimination act -->
-        @if (
-          techRecordService.canHaveDisabilityDiscriminationAct(techRecord.techRecord_vehicleType)
-        ) {
+        @if (techRecordService.canHaveDisabilityDiscriminationAct(techRecord)) {
           <app-accordion-section
+            *forTags="[]; filters: filters()"
             heading="Disability discrimination act"
             summary="Wheelchair capacity, accessibility, schedules."
           >
-            <app-disability-discrimination-act-form />
+            <app-disability-discrimination-act-form
+              [techRecord]="techRecord"
+              [filters]="filters()"
+            ></app-disability-discrimination-act-form>
           </app-accordion-section>
         }
 
         <!-- Documents -->
-        @if (techRecordService.canHaveDocuments(techRecord.techRecord_vehicleType)) {
-          <app-accordion-section heading="Documents" summary="Microfilm document details.">
-            <app-documents-form />
+        @if (techRecordService.canHaveDocuments(techRecord)) {
+          <app-accordion-section
+            *forTags="[]; filters: filters()"
+            heading="Documents"
+            summary="Microfilm document details."
+          >
+            <app-documents-form [techRecord]="techRecord" [filters]="filters()" />
           </app-accordion-section>
         }
 
         <!-- Notes -->
-        @if (techRecordService.canHaveNotes(techRecord.techRecord_vehicleType)) {
-          <app-accordion-section heading="Notes" summary="Notes attached to this record.">
-            <app-notes-form />
+        @if (techRecordService.canHaveNotes(techRecord)) {
+          <app-accordion-section
+            *forTags="[]; filters: filters()"
+            heading="Notes"
+            summary="Notes attached to this record."
+          >
+            <app-notes-form [techRecord]="techRecord" [filters]="filters()" />
           </app-accordion-section>
         }
 
         <!-- Reason for amendment -->
-        @if (techRecordService.canHaveReasonForAmendment(techRecord.techRecord_vehicleType)) {
+        @if (techRecordService.canHaveReasonForAmendment(techRecord)) {
           <app-accordion-section
+            *forTags="[]; filters: filters()"
             heading="Reason for amendment"
             summary="Tell us why you're amending this record."
           >
-            <app-reason-for-creation-form />
+            <app-reason-for-creation-form [techRecord]="techRecord" [filters]="filters()" />
           </app-accordion-section>
         }
       </app-accordion-controls>
